[tool.poetry]
name = "yoga-wasm"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
yoga-wasm = "yoga_wasm.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
wasmtime = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
